Fix for Vulkan SDK 1.2.141

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -136,6 +136,6 @@ install(FILES ${SPV_OUTPUT} CONFIGURATIONS Release DESTINATION "bin_${ARCH}/${PR
 install(FILES ${SPV_OUTPUT} CONFIGURATIONS Debug DESTINATION "bin_${ARCH}_debug/${PROJNAME}/shaders")
 install(DIRECTORY "data" CONFIGURATIONS Release DESTINATION "bin_${ARCH}/${PROJNAME}")
 install(DIRECTORY "data" CONFIGURATIONS Debug DESTINATION "bin_${ARCH}_debug/${PROJNAME}")
-install(DIRECTORY "Optix7SDK" CONFIGURATIONS Release DESTINATION "bin_${ARCH}/${PROJNAME}")
-install(DIRECTORY "Optix7SDK" CONFIGURATIONS Debug DESTINATION "bin_${ARCH}_debug/${PROJNAME}")
+install(DIRECTORY "OptiX7SDK" CONFIGURATIONS Release DESTINATION "bin_${ARCH}/${PROJNAME}")
+install(DIRECTORY "OptiX7SDK" CONFIGURATIONS Debug DESTINATION "bin_${ARCH}_debug/${PROJNAME}")
 
