--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,90 +1,19 @@
-cmake_minimum_required(VERSION 2.8)
+#*****************************************************************************
+# Copyright 2020 NVIDIA Corporation. All rights reserved.
+#*****************************************************************************
+cmake_minimum_required(VERSION 3.9.6 FATAL_ERROR)
 
+#--------------------------------------------------------------------------------------------------
+# Project setting
 get_filename_component(PROJNAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
-Project(${PROJNAME})
-Message(STATUS "-------------------------------")
-Message(STATUS "Processing Project ${PROJNAME}:")
+set(PROJNAME ${PROJNAME})
+project(${PROJNAME} LANGUAGES C CXX)
+message(STATUS "-------------------------------")
+message(STATUS "Processing Project ${PROJNAME}:")
 
-
-#####################################################################################
-# look for shared_sources 1) as a sub-folder 2) at some other locations
-# this cannot be put anywhere else since we still didn't find CMakeLists_include.txt yet
-#
-if(NOT BASE_DIRECTORY) # if not defined, it means this cmake file was called as the first entry point and not included
-  # check if the external repository is outside or inside the project (as a sub-module)
-  # testing the file CMakeLists_include.txt because when sub-modules are not cloned, the folders are still there...
-  # we also assume here that if shared_sources is there, shared_external is, too...
-  SET(BASE_DIRECTORY "" CACHE FILEPATH "folder containing shared_sources")
-  SET(ADD_SUBDIR_BELOW 1)
-  if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/shared_sources/CMakeLists_include.txt)
-    SET(BASE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
-  elseif(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/../shared_sources/CMakeLists_include.txt)
-    SET(BASE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/..)
-  elseif(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/../../shared_sources/CMakeLists_include.txt)
-    SET(BASE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../..)
-  else()
-  endif()
-endif(NOT BASE_DIRECTORY)
-
-if(EXISTS ${BASE_DIRECTORY}/shared_sources/CMakeLists_include.txt)
-  INCLUDE(${BASE_DIRECTORY}/shared_sources/CMakeLists_include.txt)
-else()
-  Message(FATAL_ERROR "could not find base directory, please set BASE_DIRECTORY to folder containing shared_sources")
-endif()
-    
-_add_project_definitions(${PROJNAME})
-
-#####################################################################################
-# additions from packages needed for this sample
-# add refs  in LIBRARIES_OPTIMIZED
-# add refs  in LIBRARIES_DEBUG
-# add files in PACKAGE_SOURCE_FILES
-
-set( EXENAME ${PROJNAME} )
-_add_package_VulkanSDK()
-_add_package_IMGUI()
-_add_package_Cuda()
-
-#####################################################################################
-# process the rest of some cmake code that needs to be done *after* the packages add
-_add_shared_sources_lib()
-
-#####################################################################################
-# Source files for this project
-#
-file(GLOB SOURCE_FILES *.cpp *.hpp *.inl *.h *.c)
-file(GLOB GLSL_FILES *.glsl)
-
-#####################################################################################
-# GLSL to SPIR-V custom build
-#
-#more than one file can be given: _compile_GLSL("GLSL_mesh.vert;GLSL_mesh.frag" "GLSL_mesh.spv" GLSL_SOURCES)
-# the SpirV validator is fine as long as files are for different pipeline stages (entry points still need to be main())
-#_compile_GLSL(<source(s)> <target spv> <LIST where files are appended>)
-UNSET(GLSL_SOURCES)
-UNSET(SPV_OUTPUT)
-file(GLOB_RECURSE GLSL_HEADER_FILES "shaders/*.glsl")
-file(GLOB_RECURSE GLSL_SOURCE_FILES
-    "shaders/*.frag"
-    "shaders/*.vert"
-    "shaders/*.rchit"
-    "shaders/*.rmiss"
-    "shaders/*.rgen"
-    )
-foreach(GLSL ${GLSL_SOURCE_FILES})
-    get_filename_component(FILE_NAME ${GLSL} NAME)
-    _compile_GLSL(${GLSL} "shaders/${FILE_NAME}.spv" GLSL_SOURCES SPV_OUTPUT)
-endforeach(GLSL)
-
-list(APPEND GLSL_SOURCES ${GLSL_HEADER_FILES})
-
-source_group(Shader_Files FILES ${GLSL_SOURCES})
-
-
-
-#####################################################################################
-# Executable
-#
+#--------------------------------------------------------------------------------------------------
+# C++ target and defines
+add_executable(${PROJNAME})
 if(WIN32 AND NOT GLUT_FOUND)
   add_definitions(/wd4996) #remove printf warning
   add_definitions(/wd4244) #remove double to float conversion warning
@@ -92,50 +21,118 @@ if(WIN32 AND NOT GLUT_FOUND)
 else()
   add_definitions(-fpermissive)
 endif()
-add_executable(${EXENAME} ${SOURCE_FILES} ${COMMON_SOURCE_FILES} ${PACKAGE_SOURCE_FILES} ${GLSL_SOURCES})
 
-#_set_subsystem_console(${EXENAME})
+
+
 
 #####################################################################################
-# common source code needed for this sample
+# look for shared_sources 1) as a sub-folder 2) at some other locations
+# this cannot be put anywhere else since we still didn't find setup.cmake yet
 #
-source_group(common FILES 
-  ${COMMON_SOURCE_FILES}
-  ${PACKAGE_SOURCE_FILES}
-)
-source_group("Source Files" FILES ${SOURCE_FILES})
+if(NOT BASE_DIRECTORY)
 
-if(UNIX)
-  set(UNIXLINKLIBS dl pthread)
-else()
-  set(UNIXLINKLIBS)
+  find_path(BASE_DIRECTORY
+    NAMES shared_sources/cmake/setup.cmake
+    PATHS ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/.. ${CMAKE_CURRENT_SOURCE_DIR}/../.. 
+    REQUIRED
+    DOC "Directory containing shared_sources"
+    )
 endif()
 
-include_directories("${CMAKE_CURRENT_SOURCE_DIR}/OptiX7SDK/include")
+if(EXISTS ${BASE_DIRECTORY}/shared_sources/cmake/setup.cmake)
+  include(${BASE_DIRECTORY}/shared_sources/cmake/setup.cmake)
+  include(${BASE_DIRECTORY}/shared_sources/cmake/utilities.cmake)
+else()
+  message(FATAL_ERROR "could not find base directory, please set BASE_DIRECTORY to folder containing shared_sources")
+endif()
+
+_add_project_definitions(${PROJNAME})
+
+set(CMAKE_CXX_STANDARD 17)
+
+#--------------------------------------------------------------------------------------------------
+# Resources
+#  
+ download_files(FILENAMES cornellBox.zip EXTRACT)
+
+_add_project_definitions(${PROJNAME})
+
+#--------------------------------------------------------------------------------------------------
+# Memory Allocation
+#   Forcing to use our memory allocator DMA (similar to Vulkan Memory Allocator (VMA))
+target_compile_definitions(${PROJNAME} PUBLIC NVVK_ALLOC_DMA)
+
+
+#####################################################################################
+# additions from packages needed for this sample
+_add_package_VulkanSDK()
+_add_package_IMGUI()
+_add_package_Cuda()
+# process the rest of some cmake code that needs to be done *after* the packages add
+_add_shared_sources_lib()
+
+#####################################################################################
+# Source files for this project
+#
+file(GLOB SOURCE_FILES *.cpp *.c)
+file(GLOB HEADER_FILES *.hpp *.inl *.h)
+
+include_directories(AFTER SYSTEM "OptiX7SDK/include")
+
+
+#----------------------------------------------------------------------------------------------
+# GLSL to SPIR-V custom build
+compile_glsl_directory(
+    SRC "${CMAKE_CURRENT_SOURCE_DIR}/shaders" 
+    DST "${CMAKE_CURRENT_SOURCE_DIR}/spv" 
+    VULKAN_TARGET "vulkan1.2"
+    DEPENDENCY ${VULKAN_BUILD_DEPENDENCIES}
+    )
+
+
+    
+
+#--------------------------------------------------------------------------------------------------
+# Sources
+target_sources(${PROJNAME} PUBLIC ${SOURCE_FILES} ${HEADER_FILES})
+target_sources(${PROJNAME} PUBLIC ${COMMON_SOURCE_FILES})
+target_sources(${PROJNAME} PUBLIC ${PACKAGE_SOURCE_FILES})
+target_sources(${PROJNAME} PUBLIC ${GLSL_SOURCES})
+target_sources(${PROJNAME} PUBLIC ${GLSL_HEADERS})
+
+
+#--------------------------------------------------------------------------------------------------
+# Sub-folders in Visual Studio
+#
+source_group("Common"         FILES ${COMMON_SOURCE_FILES} ${PACKAGE_SOURCE_FILES})
+source_group("Sources"        FILES ${SOURCE_FILES})
+source_group("Headers"        FILES ${HEADER_FILES})
+source_group("Shader Sources" FILES ${GLSL_SOURCES})
+source_group("Shader Headers" FILES ${GLSL_HEADERS})
+
+
 
 #####################################################################################
 # Linkage
 #
-target_link_libraries(${EXENAME} ${PLATFORM_LIBRARIES} shared_sources)
+target_link_libraries(${PROJNAME} ${PLATFORM_LIBRARIES} shared_sources)
 
 foreach(DEBUGLIB ${LIBRARIES_DEBUG})
-  target_link_libraries(${EXENAME} debug ${DEBUGLIB})
+  target_link_libraries(${PROJNAME} debug ${DEBUGLIB})
 endforeach(DEBUGLIB)
 
 foreach(RELEASELIB ${LIBRARIES_OPTIMIZED})
-  target_link_libraries(${EXENAME} optimized ${RELEASELIB})
+  target_link_libraries(${PROJNAME} optimized ${RELEASELIB})
 endforeach(RELEASELIB)
 
 #####################################################################################
 # copies binaries that need to be put next to the exe files (ZLib, etc.)
 #
 
-_copy_binaries_to_target( ${EXENAME} )
+_finalize_target( ${PROJNAME} )
 
-install(FILES ${SPV_OUTPUT} CONFIGURATIONS Release DESTINATION "bin_${ARCH}/${PROJNAME}/shaders")
-install(FILES ${SPV_OUTPUT} CONFIGURATIONS Debug DESTINATION "bin_${ARCH}_debug/${PROJNAME}/shaders")
-install(DIRECTORY "data" CONFIGURATIONS Release DESTINATION "bin_${ARCH}/${PROJNAME}")
-install(DIRECTORY "data" CONFIGURATIONS Debug DESTINATION "bin_${ARCH}_debug/${PROJNAME}")
-install(DIRECTORY "OptiX7SDK" CONFIGURATIONS Release DESTINATION "bin_${ARCH}/${PROJNAME}")
-install(DIRECTORY "OptiX7SDK" CONFIGURATIONS Debug DESTINATION "bin_${ARCH}_debug/${PROJNAME}")
+install(FILES ${SPV_OUTPUT} CONFIGURATIONS Release DESTINATION "bin_${ARCH}/${PROJNAME}/spv")
+install(FILES ${SPV_OUTPUT} CONFIGURATIONS Debug DESTINATION "bin_${ARCH}_debug/${PROJNAME}/spv")
+# install(DIRECTORY "OptiX7SDK" CONFIGURATIONS Release DESTINATION "bin_${ARCH}/${PROJNAME}")
+# install(DIRECTORY "OptiX7SDK" CONFIGURATIONS Debug DESTINATION "bin_${ARCH}_debug/${PROJNAME}")
 
