Bulk update nvpro-samples 11/16/22

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,36 +1,15 @@
-#*****************************************************************************
-# Copyright 2020 NVIDIA Corporation. All rights reserved.
-#*****************************************************************************
-cmake_minimum_required(VERSION 3.9.6 FATAL_ERROR)
+# Common default Cmake header for Nvpro-core samples
+cmake_minimum_required(VERSION 3.15.0 FATAL_ERROR)
+get_filename_component(PROJECT_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
+project(${PROJECT_NAME} LANGUAGES C CXX)
+
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+set(CMAKE_CXX_STANDARD 17)
 
 #--------------------------------------------------------------------------------------------------
-# Project setting
-get_filename_component(PROJNAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
-set(PROJNAME ${PROJNAME})
-project(${PROJNAME} LANGUAGES C CXX)
-message(STATUS "-------------------------------")
-message(STATUS "Processing Project ${PROJNAME}:")
-
-#--------------------------------------------------------------------------------------------------
-# C++ target and defines
-add_executable(${PROJNAME})
-if(WIN32 AND NOT GLUT_FOUND)
-  add_definitions(/wd4996) #remove printf warning
-  add_definitions(/wd4244) #remove double to float conversion warning
-  add_definitions(/wd4305) #remove double to float truncation warning
-else()
-  add_definitions(-fpermissive)
-endif()
-
-
-
-
-#####################################################################################
 # look for nvpro_core 1) as a sub-folder 2) at some other locations
 # this cannot be put anywhere else since we still didn't find setup.cmake yet
-#
 if(NOT BASE_DIRECTORY)
-
   find_path(BASE_DIRECTORY
     NAMES nvpro_core/cmake/setup.cmake
     PATHS ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/.. ${CMAKE_CURRENT_SOURCE_DIR}/../.. 
@@ -39,6 +18,7 @@ if(NOT BASE_DIRECTORY)
     )
 endif()
 
+## Various functions and macros REQUIRED
 if(EXISTS ${BASE_DIRECTORY}/nvpro_core/cmake/setup.cmake)
   include(${BASE_DIRECTORY}/nvpro_core/cmake/setup.cmake)
   include(${BASE_DIRECTORY}/nvpro_core/cmake/utilities.cmake)
@@ -46,87 +26,27 @@ else()
   message(FATAL_ERROR "could not find base directory, please set BASE_DIRECTORY to folder containing nvpro_core")
 endif()
 
-_add_project_definitions(${PROJNAME})
+set(NVPRO_CORE_DIR ${BASE_DIRECTORY}/nvpro_core)
 
-set(CMAKE_CXX_STANDARD 17)
+if(MSVC)
+    add_definitions(/wd26812)  # 'enum class' over 'enum'
+    add_definitions(/wd26451)  # Arithmetic overflow, casting 4 byte value to 8 byte value
+endif()
 
 #--------------------------------------------------------------------------------------------------
-# Resources
-#  
- download_files(FILENAMES cornellBox.zip EXTRACT)
-
-_add_project_definitions(${PROJNAME})
-
-#####################################################################################
-# additions from packages needed for this sample
+# Package shared by all projects
 _add_package_VulkanSDK()
-_add_package_IMGUI()
-_add_package_Cuda()
-# process the rest of some cmake code that needs to be done *after* the packages add
+_add_package_ImGUI()
 _add_nvpro_core_lib()
 
-#####################################################################################
-# Source files for this project
-#
-file(GLOB SOURCE_FILES *.cpp *.c)
-file(GLOB HEADER_FILES *.hpp *.inl *.h)
-
-include_directories(AFTER SYSTEM "OptiX7SDK/include")
-
-
-#----------------------------------------------------------------------------------------------
-# GLSL to SPIR-V custom build
-compile_glsl_directory(
-    SRC "${CMAKE_CURRENT_SOURCE_DIR}/shaders" 
-    DST "${CMAKE_CURRENT_SOURCE_DIR}/spv" 
-    VULKAN_TARGET "vulkan1.2"
-    DEPENDENCY ${VULKAN_BUILD_DEPENDENCIES}
-    )
-
-
-    
 
 #--------------------------------------------------------------------------------------------------
-# Sources
-target_sources(${PROJNAME} PUBLIC ${SOURCE_FILES} ${HEADER_FILES})
-target_sources(${PROJNAME} PUBLIC ${COMMON_SOURCE_FILES})
-target_sources(${PROJNAME} PUBLIC ${PACKAGE_SOURCE_FILES})
-target_sources(${PROJNAME} PUBLIC ${GLSL_SOURCES})
-target_sources(${PROJNAME} PUBLIC ${GLSL_HEADERS})
-
+# Add example
+add_subdirectory(optix_denoiser)
 
 #--------------------------------------------------------------------------------------------------
-# Sub-folders in Visual Studio
-#
-source_group("Common"         FILES ${COMMON_SOURCE_FILES} ${PACKAGE_SOURCE_FILES})
-source_group("Sources"        FILES ${SOURCE_FILES})
-source_group("Headers"        FILES ${HEADER_FILES})
-source_group("Shader Sources" FILES ${GLSL_SOURCES})
-source_group("Shader Headers" FILES ${GLSL_HEADERS})
-
-
-
-#####################################################################################
-# Linkage
-#
-target_link_libraries(${PROJNAME} ${PLATFORM_LIBRARIES} nvpro_core)
-
-foreach(DEBUGLIB ${LIBRARIES_DEBUG})
-  target_link_libraries(${PROJNAME} debug ${DEBUGLIB})
-endforeach(DEBUGLIB)
-
-foreach(RELEASELIB ${LIBRARIES_OPTIMIZED})
-  target_link_libraries(${PROJNAME} optimized ${RELEASELIB})
-endforeach(RELEASELIB)
-
-#####################################################################################
-# copies binaries that need to be put next to the exe files (ZLib, etc.)
-#
-
-_finalize_target( ${PROJNAME} )
-
-install(FILES ${SPV_OUTPUT} CONFIGURATIONS Release DESTINATION "bin_${ARCH}/${PROJNAME}/spv")
-install(FILES ${SPV_OUTPUT} CONFIGURATIONS Debug DESTINATION "bin_${ARCH}_debug/${PROJNAME}/spv")
-# install(DIRECTORY "OptiX7SDK" CONFIGURATIONS Release DESTINATION "bin_${ARCH}/${PROJNAME}")
-# install(DIRECTORY "OptiX7SDK" CONFIGURATIONS Debug DESTINATION "bin_${ARCH}_debug/${PROJNAME}")
-
+# Install - copying the media directory
+message(STATUS "COPY ${CMAKE_CURRENT_SOURCE_DIR}/media  to  ${OUTPUT_PATH}")
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/media DESTINATION ${OUTPUT_PATH})
+install(DIRECTORY "media" CONFIGURATIONS Release DESTINATION "bin_${ARCH}")
+install(DIRECTORY "media" CONFIGURATIONS Debug DESTINATION "bin_${ARCH}_debug")
