Bulk update nvpro-samples 03/07/23

--- a/optix_denoiser/CMakeLists.txt
+++ b/optix_denoiser/CMakeLists.txt
@@ -42,7 +42,7 @@ compile_glsl(
     VULKAN_TARGET "vulkan1.2"
     HEADER ON
     DEPENDENCY ${VULKAN_BUILD_DEPENDENCIES}
-    FLAGS "-I${SHD_DIR} -I${NVPRO_CORE_DIR} -g"
+    FLAGS -I${SHD_DIR} -I${NVPRO_CORE_DIR} -g
     )
 
 target_sources(${PROJECT_NAME} PRIVATE ${GLSL_SOURCES} ${GLSL_HEADERS})
