--- a/optix_denoiser/CMakeLists.txt
+++ b/optix_denoiser/CMakeLists.txt
@@ -13,7 +13,10 @@ _add_package_Optix7()
 add_executable(${PROJECT_NAME} ${SOURCE_FILES} ${COMMON_SOURCE_FILES} ${PACKAGE_SOURCE_FILES})
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${SAMPLES_COMMON_DIR} ${ADVANCE_DIR})
-target_compile_definitions(${PROJECT_NAME} PRIVATE PROJECT_NAME="${PROJECT_NAME}")
+target_compile_definitions(${PROJECT_NAME} PRIVATE
+    PROJECT_NAME="${PROJECT_NAME}"
+    IMGUI_DEFINE_MATH_OPERATORS
+    )
 source_group("Other"  FILES ${COMMON_SOURCE_FILES} ${PACKAGE_SOURCE_FILES})
 
 # Adding libraries + Cuda library (LIBRARIES_OPTIMIZED)
