--- a/optix_denoiser/CMakeLists.txt
+++ b/optix_denoiser/CMakeLists.txt
@@ -18,6 +18,8 @@ _add_nvpro_core_lib()
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES} ${COMMON_SOURCE_FILES} ${PACKAGE_SOURCE_FILES})
 
+_add_project_definitions(${PROJECT_NAME})
+
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 20)
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD_REQUIRED ON)
 
